fix footer on map and login button on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1120,6 +1120,7 @@ input[type='password']:focus {
   display: flex;
   justify-content: center;
   position: relative;
+  height: 120vh;
 }
 
 #map {
